@@ -1136,7 +1136,8 @@ SEXP attribute_hidden do_gettext(SEXP call, SEXP op, SEXP args, SEXP rho)
 SEXP attribute_hidden do_ngettext(SEXP call, SEXP op, SEXP args, SEXP rho)
 {
 #ifdef ENABLE_NLS
-    const char *domain = "";
+    const char *domain = "", *cfn;
+    ;
     char *buf;
     SEXP ans, sdom = CADDDR(args);
 #endif
@@ -1160,8 +1161,11 @@ SEXP attribute_hidden do_ngettext(SEXP call, SEXP op, SEXP args, SEXP rho)
              cptr = cptr->nextcontext)
             if (cptr->callflag & CTXT_FUNCTION)
             {
+                /* stop() etc have internal call to .makeMessage */
+                cfn = CHAR(STRING_ELT(deparse1s(CAR(cptr->call)), 0));
+                if (streql(cfn, "stop") || streql(cfn, "warning") || streql(cfn, "message"))
+                    continue;
                 rho = cptr->cloenv;
-                break;
             }
         while (rho != R_EmptyEnv)
         {
